<resources>
    <string name="app_name">Praktikum2</string>

    <string-array name="Optionen_Immobilie">
        <item>Kaufen</item>
        <item>Mieten</item>
    </string-array>

    <string name="title_activity_navigation__drawer__kunde">Navigation_Drawer_Kunde</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title_Kunde">Kunde</string>
    <string name="nav_header_title_Makler">Makler</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="menu_Immobilie_Suchen">Immobilie Suchen</string>

    <string name="menu_Favoriten">Favoriten</string>
    <string name="menu_Immobilie_Erstellen">Immobilie Erstellen</string>
    <string name="menu_Meine_Immobilien">Meine Immobilien</string>

    <string name="Preis">Preis</string>
    <string name="Preis_Hint">599</string>

    <string name="Groesse">Größe (m²)</string>
    <string name="Groesse_Hint">65</string>

    <string name="Anzahl_Zimmer">Anzahl der Zimmer</string>
    <string name="Anzahl_Zimmer_hint">3</string>

    <string name="Mieten_kaufen">Mieten / Kaufen?</string>

    <string name="Plz">Postleitzahl</string>
    <string name="plz_Hint">65618</string>

    <string name="suchen">Treffer gefunden</string>
</resources>
