<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_makler"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_Immobilie_Erstellen"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/menu_Immobilie_Erstellen" />
        <item
            android:id="@+id/nav_Meine_Immobilien"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/menu_Meine_Immobilien" />
    </group>
</menu>
