<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="85dp"
            android:padding="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/meineImmo_preis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Preis"
            android:textSize="20sp"
            android:layout_margin="8sp"
            app:layout_constraintStart_toEndOf="@+id/meineImmo_mieten_kaufen"
            app:layout_constraintTop_toBottomOf="@+id/meineImmo_standort" />

        <TextView
            android:id="@+id/meineImmo_mieten_kaufen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mieten_kaufen"
            android:textSize="20sp"
            android:layout_margin="8sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/meineImmo_standort" />

        <TextView
            android:id="@+id/meineImmo_bez"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bezeichnung"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="8sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/meineImmo_anzZimmer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Anzahl_Zimmer"
            android:textSize="20sp"
            android:layout_margin="8sp"
            app:layout_constraintStart_toEndOf="@+id/meineImmo_maklerprov"
            app:layout_constraintTop_toBottomOf="@+id/meineImmo_bez" />

        <TextView
            android:id="@+id/meineImmo_maklerprov"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Maklerprov"
            android:textSize="20sp"
            android:layout_margin="8sp"
            app:layout_constraintStart_toEndOf="@id/meineImmo_groeße"
            app:layout_constraintTop_toBottomOf="@+id/meineImmo_bez" />

        <TextView
            android:id="@+id/meineImmo_groeße"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Groesse"
            android:textSize="20sp"
            android:layout_margin="8sp"
            app:layout_constraintStart_toEndOf="@id/meineImmo_standort"
            app:layout_constraintTop_toBottomOf="@+id/meineImmo_bez" />

        <TextView
            android:id="@+id/meineImmo_standort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Plz"
            android:textSize="20sp"
            android:layout_margin="8sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/meineImmo_bez" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>